# diesel

./: .gitignore  CHANGELOG.md  README.md  diesel.cabal  shell.nix
src/: Diesel.hs
src/Diesel/: Eval.hs  Expr.hs  Prelude.hs  Type.hs  Uni.hs  Universal.hs
src/Diesel/Expr/: Internal.hs
src/Diesel/TH/: Derive.hs
test/: Main.hs
