cabal-version:      3.4
name:               diesel
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-only
license-file:       LICENSE
author:             Sean Hunter
maintainer:         gnumonik@protonmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
      Diesel,
      Diesel.TH.Derive,
      Diesel.Eval,
      Diesel.Expr,
      Diesel.Expr.Internal,
      Diesel.Type,
      Diesel.Uni,
      Diesel.Universal,
      Diesel.Prelude,
   --  other-modules:


    -- other-extensions:
    build-depends:
        base ^>=4.18.0.0
      , some
      , constraints
      , constraints-extras
      , dependent-sum
      , template-haskell
      , th-abstraction
      , pretty-simple
      , text
      , prettyprinter
    hs-source-dirs:   src
    default-language: GHC2021

test-suite diesel-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.0.0
      , diesel
      , some
      , constraints
      , constraints-extras
      , dependent-sum
      , pretty-simple
      , text
      , prettyprinter
